Fixed header so that it wraps the blue to gray gradient instead of just the blue.  Got the Services Offered navigation working

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,63 +17,50 @@
 
 header {
   padding-top: 30px;
-  height: 150px;
+  margin-bottom: 28px;
   background: url('/assets/header_blue_gradient.png');
 }
 
 
 .navbar {
-  width: 960px;
+  
 }
 
+
+
+#gray_blue_container {
+  
+  background: url('/assets/blue_gray_header_gradient.png');
+  
+}
+
+
+
 #graphic_design {
-  background: url('/assets/gold_background.png');
-  width: 920px;
+  background: url('/assets/gold_background.png');  
   height: 310px;
   padding: 20px;
   
+  
   h1 {
      color: #2D5F9F;
+  }    
+  
+}
+
+
+.blurb_container {
+  margin-top: 80px;  
+  padding: 20px;
+  
+  p {
+    color: #A3A3A3;
+    font-size: 1.8em;
   }
   
-  
-    
-  
 }
 
 
-
-.note {
-  
-   h1 {
-     color: #2D5F9F;
-   }
-   p {
-     color: black;
-   }
-   position:relative;
-   width:100%;
-   padding:1em 1.5em;
-   margin:2em auto;
-   color:#fff;
-   background:#97C02F;
-   overflow:hidden;
-}
-
-.note:before {
-   content:"";
-   position:absolute;
-   top:0;
-   left:0;
-   border-width: 20px 20px 0  0;
-   border-style:solid;
-   border-color: #fff #658E15;
-   background:#658E15;
-   -webkit-box-shadow:0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
-   -moz-box-shadow:0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
-   box-shadow:0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
-   display:block; width:0; /* Firefox 3.0 damage limitation */
-}
 
 
 .footer_note {
@@ -127,33 +114,48 @@ header {
 
 
 #services_nav {
-  width: 940px;
-  background: #666;
-  
-  
-  
-  ul {
-    text-align: center;
+  float:right;
+  position:relative;
+  left:-50%;
+  text-align:left;    
+  margin-top: -22px;
     
-    li {
-      background: #666;
-      height: 50px;
-      width: 200px;
-      list-style-type: none;
-      float: left;
-      margin-right: 10px;
-      
-      a {
-        font-size: 1.5em;
+  ul {
+    list-style:none;
+    position:relative;
+    left:49%;
+    padding-left: 0;
+          
+      li {                        
+          
+          float: left;
+          position:relative;
+          
+          
+          a {                         
+            margin: 0px;
+            background: url('/assets/services_nav_background.png');
+            float: left;            
+            color: #666;
+            padding: 30px 63px;
+            text-align: center;
+            white-space: nowrap;
+            font-size: 1.2em;
+            
+            &:hover {
+              background: gold;
+              color: white;
+            }
+            
+            
+          }
+          
       }
       
-    } 
-     
   }
-  
-  
-  
+    
 }
+
 
 
 
